python-dogpile.cache (0.6.1-1) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)

  [ James Page ]
  * Merge Ubuntu delta into Debian:
    - Add autopkg tests.
    - Drop obsolete and undocumented Pre-Depends on a pre-lucid dpkg
      version. There is no need to run python-dogpile.cache's autopkg
      tests when a new dpkg version is uploaded.
    - Build-Depend on python{,3}-coverage.
  * Drop BD's on python{3}-dogpile.core; dogpile.core is now part
    of dogpile.cache.
  * Add python{3}-mako to BD's.
  * d/control: Add transitional packages for python{3}-dogpile.core.

 -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:26:39 +0200

python-dogpile.cache (0.5.7-2) unstable; urgency=medium

  * Uploading to unstable.
  * Added python-pytest as build-depends-indep.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 07:57:12 +0000

python-dogpile.cache (0.5.7-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Fixed homepage (https).
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed debian/copyright ordering.
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Thu, 03 Mar 2016 20:34:59 +0000

python-dogpile.cache (0.5.4-1) unstable; urgency=medium

  * New upstream release.
  * Added Python3 support (Closes: #751739), and build the sphinx doc.

 -- Thomas Goirand <zigo@debian.org>  Mon, 16 Jun 2014 17:23:35 +0800

python-dogpile.cache (0.5.3-1) unstable; urgency=medium

  * New upstream release (Closes: #745488).
  * Fixed upstream VCS URLs.
  * Standards-Version: is now 3.9.5.
  * Now running unit tests at build time.

 -- Thomas Goirand <zigo@debian.org>  Sat, 03 May 2014 21:04:30 +0800

python-dogpile.cache (0.5.0-1) unstable; urgency=low

  * Initial release. (Closes: #722051)

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Sep 2013 20:41:04 +0800