@@ -16,14 +16,11 @@ Build-Depends-Indep: python-changelog,
                      python-coverage,
                      python-mako,
                      python-mock,
-                     python-nose,
-                     python-nosexcover,
                      python-pytest,
                      python-sphinx-paramlinks,
                      python3-coverage,
                      python3-mako,
                      python3-mock,
-                     python3-nose,
                      python3-pytest,
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-dogpile.cache.git/
