@@ -14,6 +14,8 @@ python-dogpile.cache (0.6.1-1) UNRELEASED; urgency=medium
     of dogpile.cache.
   * Add python{3}-mako to BD's.
   * d/control: Add transitional packages for python{3}-dogpile.core.
+  * d/rules,control: Switch unit test execution to pytest, skip non
+    default backends from test runs.
 
  -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:26:39 +0200
 
